test/parser/traits/trait_specifier_missing_impl.yl
// RUN: compiler %s -ast-dump 2>&1 | filecheck %s
fn main() {
  // CHECK: [[# @LINE + 1 ]]:7: error: expected 'impl'
  @<S A>::foo();
}
